# qwirklepp

./: CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt
lib/include/qwirklepp/: actor.h  board.h  content.h  cube.h  cubes.h  game.h  observer.h  types.h
lib/src/: board.cpp  content.cpp  cube.cpp  cubes.cpp  game.cpp
