PROJECT(libqwirklepp)

FIND_PACKAGE(Boost REQUIRED)

FILE(GLOB_RECURSE libqwirklepp_SOURCES src *.cpp)

SET(CMAKE_CXX_VISIBILITY_PRESET hidden)

SET(LIBRARY_NAME qwirklepp)
ADD_LIBRARY(${LIBRARY_NAME} SHARED ${libqwirklepp_SOURCES})
TARGET_INCLUDE_DIRECTORIES(${LIBRARY_NAME} PUBLIC include ${PROJECT_BINARY_DIR})

INCLUDE(GenerateExportHeader)
GENERATE_EXPORT_HEADER(${LIBRARY_NAME})

INSTALL(TARGETS qwirklepp LIBRARY DESTINATION lib)
